--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="Main">
         <div id="header">
             <div id="logo">
-                <img src="img/Capture-removebg-preview.png" alt="" height="">
+                <img src="IMG/Capture-removebg-preview.png" alt="" height="">
             </div>
 
             <div id="nav">
@@ -45,7 +45,7 @@
                     </a></li>
                     <li><a href="">
                         <div class="icon">
-                            <img src="img/search-removebg-preview.png"  alt="" >
+                            <img src="IMG/search-removebg-preview.png"  alt="" >
                         </div>
                         <div class="name">
                             <p style="padding-top: 10px;">Trip ideas</p>
@@ -53,7 +53,7 @@
                     </a></li>
                     <li><a href="">
                         <div class="icon">
-                            <img src="img/tourguide-removebg-preview.png" alt="">
+                            <img src="IMG/tourguide-removebg-preview.png" alt="">
                         </div>
                         <div class="name">
                             <p>Tour Guide</p>
@@ -61,7 +61,7 @@
                     </a></li>
                     <li><a href="">
                         <div class="icon">
-                            <img src="img/journey-removebg-preview.png" alt="">
+                            <img src="IMG/journey-removebg-preview.png" alt="">
                         </div>
                         <div class="name">
                             <p>Journey</p>
@@ -110,9 +110,9 @@
                       </div>
                       
                      <div class="shop-body">
-                          <h3 class="shop-heading">
-                             Cà phê thị (cơ sở 2)
-                          </h3>
+                          <a href="personal.html" style="text-decoration: none; color: black;"><h3 class="shop-heading" id="head">
+                            Cà phê thị (cơ sở 2)
+                         </h3></a>
       
                           <div class="info">
                               <div class="img-info">
